--- a/hello/platforms/android/res/values/strings.xml
+++ b/hello/platforms/android/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">helloWorld</string>
+    <string name="app_name">Whelmo</string>
 </resources>
